Fixed initial ball movement and made page in dark mode with bootstrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
 }
 
 canvas {
-    background-color: gold;
+    background-color: #eee;
     display: block;
-    margin: 0 auto;
 }
